Fixed CSS bug on Firefox

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -32,6 +32,7 @@ ul#navigation li {
 }
 
 table#restaurants {
+    clear: both;
     border-spacing: 0;
     width: 100%;
 }
